<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/voice_command_option"
        android:title="@string/voice_command_txt"/>

    <item
        android:id="@+id/home_option"
        android:title="@string/home_txt"/>

    <item
        android:id="@+id/todo_option"
        android:title="@string/todo_txt"/>

    <item
        android:id="@+id/journal_option"
        android:title="@string/journal_txt"/>

    <item
        android:id="@+id/wallet_option"
        android:title="@string/wallet_txt"/>

    <item
        android:id="@+id/reminder_option"
        android:title="@string/reminder_txt"/>

    <item
        android:id="@+id/settings_option"
        android:title="@string/settings_txt"/>

    <item
        android:id="@+id/sign_out_option"
        android:title="@string/sign_out_txt"/>
</menu>