<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/user_voice_command_option"
        android:title="@string/voice_command_txt"/>

    <item
        android:id="@+id/user_home_option"
        android:title="@string/home_txt"/>

    <item
        android:id="@+id/user_todo_option"
        android:title="@string/todo_txt"/>

    <item
        android:id="@+id/user_journal_option"
        android:title="@string/journal_txt"/>

    <item
        android:id="@+id/user_wallet_option"
        android:title="@string/wallet_txt"/>

    <item
        android:id="@+id/user_reminder_option"
        android:title="@string/reminder_txt"/>

    <item
        android:id="@+id/user_settings_option"
        android:title="@string/settings_txt"/>

    <item
        android:id="@+id/user_sign_out_option"
        android:title="@string/sign_out_txt"/>
</menu>