<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".Reminder.AddReminderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="5.5">

        <LinearLayout
            android:id="@+id/add_reminder_alarm_or_event_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="32dp">

                    <Button
                        android:id="@+id/add_reminder_alarm_btn"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:textColor="@color/colorWhite"
                        android:clickable="true"
                        android:focusable="true"
                        android:shadowColor="@color/colorDarkGrey"
                        android:stateListAnimator="@null"
                        android:elevation="2dp"
                        android:text="@string/alarm_txt" />

                    <Button
                        android:id="@+id/add_reminder_event_btn"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:textColor="@color/colorPrimary"
                        android:clickable="true"
                        android:focusable="true"
                        android:elevation="2dp"
                        android:shadowColor="@color/colorWhite"
                        android:stateListAnimator="@null"
                        android:text="@string/event_txt" />

                </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_reminder_title_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:visibility="gone"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25" />

            <EditText
                android:id="@+id/add_reminder_title_editText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="32dp"
                android:layout_weight="0.5"
                android:backgroundTint="@color/colorWhite"
                android:gravity="start|bottom"
                android:hint="@string/title_txt"
                android:inputType="textAutoCorrect|textCapSentences"
                android:lines="2"
                android:maxLength="30"
                android:maxLines="3"
                android:textColor="@color/icons"
                android:textCursorDrawable="@null" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/add_reminder_description_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:visibility="gone"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25"
                android:background="@color/colorWhite" />

            <EditText
                android:id="@+id/add_reminder_description_editText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="32dp"
                android:layout_weight="0.5"
                android:gravity="start|bottom"
                android:hint="@string/description_txt"
                android:inputType="textMultiLine|textCapSentences"
                android:lines="2"
                android:maxLines="3"
                android:scrollbars="vertical"
                android:textColor="@color/primary_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.25" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/add_reminder_date_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="32dp"
            android:visibility="gone"
            android:layout_weight="0.5"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:background="@color/colorWhite"
                android:gravity="center_vertical"
                android:weightSum="3">

                <ImageButton
                    android:id="@+id/add_reminder_date_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@android:color/transparent"
                    android:padding="8dp"
                    android:src="@drawable/icon_date" />

                <EditText
                    android:id="@+id/add_reminder_date_editText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:editable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="start"
                    android:textColor="@color/secondary_text"
                    android:textIsSelectable="false" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_reminder_time_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="32dp"
            android:layout_weight="3"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:orientation="vertical">

            <TimePicker
                android:id="@+id/add_reminder_time_picker"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="0.5"
            android:background="@color/colorWhite"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:gravity="center">

                <Button
                    android:id="@+id/add_reminder_cancel_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorWhite"
                    android:clickable="true"
                    android:focusable="true"
                    android:shadowColor="@color/colorWhite"
                    android:stateListAnimator="@null"
                    android:text="@string/cancel_txt"
                    android:textColor="@color/grey600" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <Button
                    android:id="@+id/add_reminder_add_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/shape_rounded_rectangle"
                    android:text="@string/add_txt"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>